# omni-directional-light-example

./: Readme.md  meson.build
Assets/: Cube.glb  FlippedCube.glb  Vertical Plane.glb  light.frag  light.vert  main.frag  main.vert
include/: Mesh.h  Renderer.h  Shader.h
src/: Mesh.cpp  Renderer.cpp  Shader.cpp  main.cpp
